--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -94,6 +94,9 @@
 			<li>Removed unused SenderService and jMDNS.</li>
 			<li>Removed unused and broken <code>UserNotificationLoggingEventHandler</code> and <code>UserNotificationAccessEventHandler</code>.</li>
 			<li>Removed macify to ensure Java 9 compatibility.</li>
+			<li>Removed <code>de.huxhorn.lilith.jul-slf4j-handler</code>. Use <code>org.slf4j:jul-to-slf4j</code> and enable <code>ch.qos.logback.classic.jul.LevelChangePropagator</code> instead.</li>
+			<li>Removed Substance look &amp; feel. The <a href="https://github.com/Insubstantial/insubstantial/">Insubstantial</a> fork is broken in Java 9 and isn't maintained anymore. The just-revived original <a href="https://github.com/kirill-grouchnikov/substance">substance</a> won't provide Maven artifacts because those are just <a href="https://github.com/kirill-grouchnikov/substance/issues/20#issuecomment-282442844">"the latest chic"</a>.</li>
+			<li>Removed JGoodies look &amp; feel. The current version is broken in Java 9 and the next version will be closed-source and payware.</li>
 		</ul>
 		<h3>Fixed</h3>
 		<ul>
@@ -105,7 +108,7 @@
 			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since <code>-internal</code> is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
 			<li>Making sure selected event is reset when last view is closed.</li>
-			<li>log4j2 2.8, slf4j 1.7.24, Logback 1.2.1, jackson 2.8.7, Spring 4.3.6, Groovy 2.4.9, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, jgoodies 2.7.0, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.60, commons-lang3 3.5</li>
+			<li>log4j2 2.8.1, slf4j 1.7.24, Logback 1.2.1, jackson 2.8.7, Spring 4.3.7, Groovy 2.4.9, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.64, commons-lang3 3.5</li>
 		</ul>
 		<h3>Security</h3>
 		<ul>
@@ -126,10 +129,9 @@ See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=79">Issue 7
 You can see this effect by examining the event created by LogPinupLargeRunnable (executed via "Log ASCII").
 The HTML created is actually correct.
 See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=125">Issue 125: &lt;pre&gt; ignores leading whitespace</a>.</li><li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
-See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=105">Issue 105: URLs with anchors</a>.</li></ul></li>
-			<li>Lilith may hang during startup while creating the preferences dialog. Just restart Lilith in that rare case.
-This is caused by <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6995182">Java bug #6995182</a> and I can't do anything about it.
-Sorry about it. It's a stupid Java-MediaTracker-ColorChooser-Bug with no workaround available.</li>
+See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=105">Issue 105: URLs with anchors</a>.</li><li>A regression introduced in 9.0.7 prevents me from upgrading to a newer version of Flying Saucer.
+See <a href="https://code.google.com/archive/p/flying-saucer/issues/262">Issue 262: Regression resolving stylesheets relative to docroot</a>.</li></ul></li>
+			<li><a href="https://java.net/jira/browse/GLAZEDLISTS-469">GLAZEDLISTS-469 - AutoCompleteSupport: Arrowing down on the popup and pressing enter fails to update combobox</a> is happening in the find panel on macOS. Select the correct entry with the mouse as a workaround.</li>
 		</ul>
 		<h2>Previous Versions</h2>
 		<ul>
